--- a/css/app.css
+++ b/css/app.css
@@ -10545,7 +10545,7 @@ template {
   opacity: 1;
 }
 
-.modal-dialog {
+.dialog {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10558,11 +10558,11 @@ template {
   background: linear-gradient(180deg, #2b2b2b 0%, #212121 65%, #141414 100%);
 }
 
-.modal-dialog p {
+.dialog p {
   padding-top: 1rem;
 }
 
-.modal-dialog .button {
+.dialog .button {
   margin-top: 1rem;
   width: 10rem;
   font-weight: bold;
