--- a/scss/layout/_landing.scss
+++ b/scss/layout/_landing.scss
@@ -29,7 +29,7 @@
 .winery-image {
     opacity: 1;
     display: block;
-    height: auto;
+    width: 25rem;
     transition: .5s ease;
     backface-visibility: hidden;
 }
