--- a/scss/layout/_homeandnetherwood.scss
+++ b/scss/layout/_homeandnetherwood.scss
@@ -1,9 +1,11 @@
-.homevineyardimage {
+.homevineyard-image {
     position: relative;
+    width: 35rem;
 }
 
 .netherwood-vineyard-image {
     position: relative;
+    width: 35rem;
 }
 
 .homeandnetherwood {
