--- a/scss/layout/_currentreleases.scss
+++ b/scss/layout/_currentreleases.scss
@@ -8,6 +8,9 @@
 
     h2 {
         color: white;
+        @include tablet {
+            font-size: 2rem;
+        }
     }
 
     h4 {
@@ -22,7 +25,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 100px 0px 100px 0px;
+        padding: 3rem 0 5rem 0;
     
         p {
             color: white;
@@ -35,14 +38,24 @@
         }
     
         .line {
-            width: 500px;
+            width: 20rem;
+            @include tablet {
+                width: 15rem;
+            }
             height: 30px;
             border-bottom: 1.8px solid rgb(255, 255, 255);
+        }
+
+        .button-inverse {
+            margin-top: 1rem;
         }
     }
 
     .bottom {
-        padding-top: 70px;
+        padding: 3rem 0 3rem;
+        @include tablet {
+            padding: 0 0 3rem;
+        }
         color: green;
 
         h5 {
@@ -83,6 +96,9 @@
     flex-direction: column;
     align-items: center;
     border-left: 3px dashed rgb(255, 255, 255);
+    @include tablet {
+        border-left: none;
+    }
     
     p {
         padding-top: 20px;
