--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -36,6 +36,10 @@
         background-color: rgb(230, 230, 230);
         padding: 0.5rem 0;
 
+        @include tablet {
+            display: none;
+        }
+
         ul {
             display: flex;
             list-style-type: none;
@@ -72,6 +76,10 @@
     }
 
     .social-media-icons {
+
+        @include tablet {
+            display: none
+        }
 
         ul {
             display: flex;
