--- a/scss/layout/_restaurantmain.scss
+++ b/scss/layout/_restaurantmain.scss
@@ -33,4 +33,14 @@
         margin-top: 1rem;
         width: 12rem;
     }
+
+    @include tablet {
+        h2 {
+            font-size: 2rem;
+        }
+
+        p {
+            font-size: 1rem;
+        }
+    }
 }
