--- a/scss/layout/_vineyards.scss
+++ b/scss/layout/_vineyards.scss
@@ -38,6 +38,7 @@
 
     @include tablet {
         display: grid;
+        justify-items: center;
         grid-template-columns: 25rem;
     }
     img {
