--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -1,4 +1,5 @@
 $mobile-width: 420px;
+$tablet-small-width: 650px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
 
@@ -9,14 +10,19 @@ $desktop-width: 1024px;
 }
 
 @mixin tablet {
-    @media (max-width: #{$desktop-width}) {
+    @media (max-width: #{$tablet-width}) {
         @content;
     }
 }
 
+@mixin tablet-small {
+    @media (max-width: #{$tablet-small-width}) {
+        @content;
+    }
+}
 
 @mixin mobile {
-    @media (max-width: #{$desktop-width}) {
+    @media (max-width: #{$mobile-width}) {
         @content;
     }
 }
