--- a/scss/layout/_homeandnetherwood.scss
+++ b/scss/layout/_homeandnetherwood.scss
@@ -42,6 +42,12 @@
         }
     }
 
+    @include tablet-small {
+        p {
+            width: 28rem;
+        }
+    }
+
     p {
         text-align: center;
         color: white;
