--- a/scss/layout/_vineyards.scss
+++ b/scss/layout/_vineyards.scss
@@ -12,6 +12,11 @@
                 width: 30rem;
             }
         }
+        @include mobile {
+            h1 {
+                width: 20rem;
+            }
+        }
     }
 }
 
