--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -23,7 +23,7 @@ h5 {
 }
 
 p {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 30px;
     font-size: 15px;
     padding-top: 40px;
