--- a/scss/layout/_landing.scss
+++ b/scss/layout/_landing.scss
@@ -14,6 +14,9 @@
     grid-template-rows: 50% 50%;
     margin: 11rem 0 0.3rem;
     padding: 15px;
+    @include mobile {
+        padding: 0px;
+    }
     opacity: 30px;
 
     @include tablet {
@@ -127,6 +130,9 @@
     }
 
     @include mobile {
+        h1 {
+            margin: 0 0 1rem;
+        }
         .line {
             width: 20rem !important;
         }
