--- a/scss/layout/_bnb.scss
+++ b/scss/layout/_bnb.scss
@@ -1,12 +1,15 @@
 .bnb {
     display: block;
+
     .desktop-view {
         display: grid;
         grid-template-columns: 50% 50%;
     }
+
     .button {
         margin-top: 2rem;
     }
+
     .tablet-view {
         display: none;
     }
@@ -21,6 +24,7 @@
         .desktop-view {
             display: none;
         }
+
         .tablet-view {
             display: block;
         }
@@ -44,21 +48,31 @@
 
         p {
             width: 40rem;
+
             @include tablet-small {
                 width: 28rem;
             }
+
             @include mobile {
                 width: 20rem;
             }
+        }
+    }
+
+    h2 {
+        @include mobile {
+            margin-top: 3rem;
         }
     }
 }
 
 .stay-bnb {
     width: 30rem;
+
     @include tablet {
         width: 25rem;
     }
+
     @include mobile {
         width: 20rem;
     }
