--- a/scss/layout/_vineyards.scss
+++ b/scss/layout/_vineyards.scss
@@ -4,6 +4,9 @@
     align-items: center;
     padding: 60px 0px;
     background-color: $background-light;
+    @include mobile {
+        padding: 1.5rem 0 0;
+    }
 
     .heading-box {
         @include tablet {
@@ -40,6 +43,9 @@
 .vineyard-images {
     display: flex;
     justify-content: center;
+    @include mobile {
+        margin-bottom: 1rem;
+    }
 
     @include tablet {
         display: grid;
@@ -47,7 +53,7 @@
         grid-template-columns: 25rem;
     }
     img {
-        margin: 30px 10px;
+        margin: 1rem 0.5rem;
         width: 30rem;
         border: 1px solid rgb(56, 56, 56);
     }
