--- a/css/app.css
+++ b/css/app.css
@@ -9875,6 +9875,16 @@ p {
   }
 }
 
+@media (max-width: 650px) {
+  .collage {
+    margin: 0 0 0.3rem;
+    padding-top: 0.5rem;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+  }
+}
+
 .collage img {
   margin: 0.5rem;
 }
@@ -9889,6 +9899,13 @@ p {
     align-items: center;
     margin: 8rem 1rem 0 1rem;
   }
+  .nav-buttons a {
+    color: white;
+    margin: 0 2rem 1rem 0;
+  }
+  .nav-buttons a:hover {
+    color: #279e22;
+  }
   .nav-buttons .button-inverse {
     margin: 0 1rem 1rem;
   }
@@ -9897,7 +9914,7 @@ p {
 @media (max-width: 650px) {
   .nav-buttons {
     display: grid;
-    grid-template-columns: 10rem 10rem;
+    grid-template-columns: 10rem;
     justify-items: center;
   }
 }
